crates/hwp-core/tests/snapshots/snapshot_tests__multicolumns_in_common_controls_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="hwp-body">
<table class="hwp-table" style="border-collapse: collapse; border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0)">
<tr>
<td style="border-left: 0.12mm solid rgb(0,0,0); border-right: 0.12mm solid rgb(0,0,0); border-top: 0.12mm solid rgb(0,0,0); border-bottom: 0.12mm solid rgb(0,0,0); width: 419.5pt"><p><span style="font-size: 10.0pt; font-family: '바탕'">다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 </span></p>  </td>
</tr>
</table><div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">표 </span><span style="font-size: 10.0pt; font-family: '바탕'"> </span></p></div>
<div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 </span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 </span></p></div><div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">그림 </span><span style="font-size: 10.0pt; font-family: '바탕'"> </span></p></div><div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">그림 </span><span style="font-size: 10.0pt; font-family: '바탕'"> </span></p></div>
</div>
