crates/hwp-core/tests/snapshots/snapshot_tests__multicolumns_in_common_controls_hwpx_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="hwp-body">
<table class="hwp-table">
<tr>
<td><p><span style="font-size: 10.0pt; font-family: '바탕'">다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단</span></p>  </td>
</tr>
</table>
<div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단 다단</span></p></div>
</div>
