crates/hwp-core/tests/snapshots/snapshot_tests__multicolumns_layout_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<!DOCTYPE html>
<html>
<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">

<head>
  <title>첫페이지</title>
  <meta http-equiv="content-type" content="text/html; charset=utf-8">
  <style>
body {margin:0;padding-left:0;padding-right:0;padding-bottom:0;padding-top:2mm;}
.hce {margin:0;padding:0;position:absolute;overflow:hidden;}
.hme {margin:0;padding:0;position:absolute;}
.hhe {margin:0;padding:0;position:relative;}
.hhi {display:inline-block;margin:0;padding:0;position:relative;background-size:contain;}
.hls {margin:0;padding:0;position:absolute;}
.hfS {margin:0;padding:0;position:absolute;}
.hcD {margin:0;padding:0;position:absolute;}
.hcI {margin:0;padding:0;position:absolute;}
.hcS {margin:0;padding:0;position:absolute;}
.hfN {margin:0;padding:0;position:relative;}
.hmB {margin:0;padding:0;position:absolute;}
.hmO {margin:0;padding:0;position:absolute;}
.hmT {margin:0;padding:0;position:absolute;}
.hpN {display:inline-block;margin:0;padding:0;position:relative;white-space:nowrap;}
.htC {display:inline-block;margin:0;padding:0;position:relative;vertical-align:top;overflow:hidden;}
.haN {display:inline-block;margin:0;padding:0;position:relative;}
.hdu {margin:0;padding:0;position:relative;}
.hdS {margin:0;padding:0;position:absolute;}
.hsC {margin:0;padding:0;position:absolute;}
.hsR {margin:0;padding:0;position:absolute;background-size:100% 100%;}
.hsG {margin:0;padding:0;position:absolute;}
.hsL {margin:0;padding:0;position:absolute;}
.hsT {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsE {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsA {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsP {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsV {margin:0;padding:0;position:absolute;overflow:hidden;}
.hsO {margin:0;padding:0;position:absolute;}
.hsU {margin:0;padding:0;position:absolute;overflow:hidden;}
.hpi {margin:0;padding:0;position:absolute;}
.hch {margin:0;padding:0;position:absolute;}
.hcG {margin:0;padding:0;position:absolute;}
.heq {margin:0;padding:0;position:absolute;}
.heG {margin:0;padding:0;position:absolute;}
.htA {margin:0;padding:0;position:absolute;}
.hvi {margin:0;padding:0;position:absolute;}
.htb {margin:0;padding:0;position:absolute;}
.htG {margin:0;padding:0;position:absolute;}
.hfJ {margin:0;padding:0;position:absolute;}
.hfG {margin:0;padding:0;position:absolute;}
.hfB {margin:0;padding:0;position:absolute;}
.hfR {margin:0;padding:0;position:absolute;}
.hfC {margin:0;padding:0;position:absolute;}
.hfO {margin:0;padding:0;position:absolute;}
.hfL {margin:0;padding:0;position:absolute;}
.hfM {margin:0;padding:0;position:absolute;}
.hfE {margin:0;padding:0;position:absolute;}
.hpl {margin:0;padding:0;position:absolute;}
.hs {margin:0;padding:0;position:absolute;overflow:visible;}
.hpa {position:relative;padding:0;overflow:hidden;margin-left:2mm;margin-right:0mm;margin-bottom:2mm;margin-top:0mm;border:1px black solid;box-shadow:1mm 1mm 0 #AAAAAA;}
.hpa::after {content:'';position:absolute;margin:0;padding:0;left:0;right:0;top:0;bottom:0;background-color:white;z-index:-2;}
.hrt {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;vertical-align:middle;line-height:1.1;}
.hco {display:inline-block;margin:0;padding:0;position:relative;white-space:inherit;}
.hcc {margin:0;padding:0;position:absolute;}
.hls {clear:both;}
[onclick] {cursor:pointer;}
.cs0 {
  font-size:10pt;color:rgb(0,0,0);font-family:"굴림";
}
.cs1 {
  font-size:10pt;color:rgb(0,0,0);font-family:"바탕";
}
.cs2 {
  font-size:9pt;color:rgb(0,0,0);font-family:"굴림";
}
.cs3 {
  font-size:9pt;color:rgb(0,0,0);font-family:"바탕";letter-spacing:-0.03em;
}
.cs4 {
  font-size:9pt;color:rgb(0,0,0);font-family:"굴림";letter-spacing:-0.03em;
}
.cs5 {
  font-size:72pt;color:rgb(0,0,0);font-family:"바탕";
}
.cs6 {
  font-size:120pt;color:rgb(0,0,0);font-family:"바탕";
}
.cs7 {
  font-size:120pt;color:rgb(0,51,102);font-family:"바탕";
}
.cs8 {
  font-size:120pt;color:rgb(255,0,0);font-family:"바탕";
}
.ps0 {
  text-align:justify;
}
.ps1 {
  text-align:justify;
}
.ps2 {
  text-align:justify;
}
.ps3 {
  text-align:justify;
}
.ps4 {
  text-align:justify;
}
.ps5 {
  text-align:justify;
}
.ps6 {
  text-align:justify;
}
.ps7 {
  text-align:justify;
}
.ps8 {
  text-align:justify;
}
.ps9 {
  text-align:justify;
}
.ps10 {
  text-align:justify;
}
.ps11 {
  text-align:justify;
}
@media print {
.hpa {margin:0;border:0 black none;box-shadow:none;}
body {padding:0;}
}
  </style>
</head>


<body>
<div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps1" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:150.00mm;"><span class="hrt cs1">첫페이지 첫 문단: 1단</span></div></div><div class="hcI" style="top:7.53mm;"><div class="hls ps1" style="line-height:42.33mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:42.33mm;width:70.99mm;"><span class="hrt cs7">2단&nbsp;</span></div><div class="hls ps1" style="line-height:42.33mm;white-space:nowrap;left:0.00mm;top:67.73mm;height:42.33mm;width:70.99mm;"><span class="hrt cs7">2단&nbsp;</span></div><div class="hls ps1" style="line-height:42.33mm;white-space:nowrap;left:0.00mm;top:135.47mm;height:42.33mm;width:70.99mm;"><span class="hrt cs7">2단</span><span class="hrt cs6">&nbsp;</span></div></div><div class="hcI" style="left:78.99mm;top:7.53mm;"><div class="hls ps1" style="line-height:42.33mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:42.33mm;width:70.99mm;"><span class="hrt cs8">2단&nbsp;</span></div><div class="hls ps1" style="line-height:42.33mm;white-space:nowrap;left:0.00mm;top:67.73mm;height:42.33mm;width:70.99mm;"><span class="hrt cs8">2단&nbsp;</span></div><div class="hls ps1" style="line-height:42.33mm;white-space:nowrap;left:0.00mm;top:135.47mm;height:42.33mm;width:70.99mm;"><span class="hrt cs8">2단</span><span class="hrt cs6">&nbsp;</span></div></div></div></div><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps1" style="line-height:42.33mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:42.33mm;width:70.99mm;"><span class="hrt cs7">2단&nbsp;</span></div><div class="hls ps1" style="line-height:42.33mm;white-space:nowrap;left:0.00mm;top:67.73mm;height:42.33mm;width:70.99mm;"><span class="hrt cs7">2단&nbsp;</span></div><div class="hls ps1" style="line-height:42.33mm;white-space:nowrap;left:0.00mm;top:135.47mm;height:42.33mm;width:70.99mm;"><span class="hrt cs7">2단</span></div></div><div class="hcI" style="left:78.99mm;"><div class="hls ps1" style="line-height:42.33mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:42.33mm;width:70.99mm;"><span class="hrt cs8">2단&nbsp;</span></div><div class="hls ps1" style="line-height:42.33mm;white-space:nowrap;left:0.00mm;top:67.73mm;height:42.33mm;width:70.99mm;"><span class="hrt cs8">2단&nbsp;</span></div><div class="hls ps1" style="line-height:42.33mm;white-space:nowrap;left:0.00mm;top:135.47mm;height:42.33mm;width:70.99mm;"><span class="hrt cs8">2단</span></div></div><div class="hcI" style="top:181.80mm;"><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:25.40mm;width:47.33mm;"><span class="hrt cs5">3단&nbsp;</span></div></div><div class="hcI" style="left:51.33mm;top:181.80mm;"><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:25.40mm;width:47.33mm;"><span class="hrt cs5">3단&nbsp;</span></div></div><div class="hcI" style="left:102.66mm;top:181.80mm;"><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:25.40mm;width:47.33mm;"><span class="hrt cs5">3단&nbsp;</span></div></div></div></div><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:25.40mm;width:47.33mm;"><span class="hrt cs5">3단 &nbsp;</span></div><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:40.64mm;height:25.40mm;width:47.33mm;"><span class="hrt cs5">3단 &nbsp;</span></div><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:81.28mm;height:25.40mm;width:47.33mm;"><span class="hrt cs5">3단 &nbsp;</span></div><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:121.92mm;height:25.40mm;width:47.33mm;"><span class="hrt cs5">3단&nbsp;</span></div><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:162.56mm;height:25.40mm;width:47.33mm;"><span class="hrt cs5">3단&nbsp;</span></div><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:203.20mm;height:25.40mm;width:47.33mm;"><span class="hrt cs5">3단&nbsp;</span></div></div><div class="hcI" style="left:51.33mm;"><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:25.40mm;width:47.33mm;"><span class="hrt cs5">3단&nbsp;</span></div><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:40.64mm;height:25.40mm;width:47.33mm;"><span class="hrt cs5">3단&nbsp;</span></div><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:81.28mm;height:25.40mm;width:47.33mm;"><span class="hrt cs5">3단&nbsp;</span></div><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:121.92mm;height:25.40mm;width:47.33mm;"><span class="hrt cs5">3단</span></div><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:162.56mm;height:25.40mm;width:47.33mm;"><span class="hrt cs5">3단&nbsp;</span></div><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:203.20mm;height:25.40mm;width:47.33mm;"><span class="hrt cs5">3단&nbsp;</span></div></div><div class="hcI" style="left:102.66mm;"><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:25.40mm;width:47.33mm;"><span class="hrt cs5">3단</span></div></div></div></div><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:30mm;top:35mm;"><div class="hcI"><div class="hls ps1" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:70.99mm;"><span class="hrt cs1">두 번 째 페이지: 새 쪽으로 2 단</span></div><div class="hls ps1" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:5.46mm;height:3.53mm;width:70.99mm;"></div><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:11.29mm;height:25.40mm;width:70.99mm;"><span class="hrt cs5">다단</span></div><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:51.93mm;height:25.40mm;width:70.99mm;"><span class="hrt cs5">다단</span></div><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:92.57mm;height:25.40mm;width:70.99mm;"><span class="hrt cs5">다단</span></div><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:133.21mm;height:25.40mm;width:70.99mm;"><span class="hrt cs5">다단</span></div><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:173.85mm;height:25.40mm;width:70.99mm;"><span class="hrt cs5">다단</span></div></div><div class="hcI" style="left:78.99mm;"><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:25.40mm;width:70.99mm;"><span class="hrt cs5">다단</span></div><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:40.64mm;height:25.40mm;width:70.99mm;"><span class="hrt cs5">다단</span></div><div class="hls ps1" style="line-height:31.75mm;white-space:nowrap;left:0.00mm;top:81.28mm;height:31.75mm;width:70.99mm;"><div class="hsR" style="margin-bottom:0mm;margin-right:0mm;display:inline-block;position:relative;vertical-align:middle;top:24.99mm;left:20mm;width:68.67mm;height:31.87mm;"><div class="hsT" style="left:-0.06mm;top:-0.06mm;width:68.67mm;height:31.87mm;"><svg class="hs" viewBox="-0.3 -0.3 69.27 32.47" style="left:-0.15mm;top:-0.15mm;width:68.97mm;height:32.17mm;"><path fill="none" d="M0.06,0.06L68.61,0.06L68.61,31.81L0.06,31.81L0.06,0.06Z " style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg><div class="hcD" style="left:1.05mm;top:1.05mm;"><div class="hcI" style="top:1.83mm;"><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:29.27mm;"><span class="hrt cs1">글 상자 안의 다</span></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:5.46mm;height:3.53mm;width:29.27mm;"><span class="hrt cs1">단</span></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:11.11mm;height:3.53mm;width:29.27mm;"><span class="hrt cs1">글상자 글상자 글</span></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:16.75mm;height:3.53mm;width:29.27mm;"><span class="hrt cs1">상자 글상자 글상</span></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:22.40mm;height:3.53mm;width:29.27mm;"><span class="hrt cs1">자 글상자 글상자&nbsp;</span></div></div><div class="hcI" style="left:37.27mm;top:1.83mm;"><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:29.27mm;"><span class="hrt cs1">글상자 글상자 글</span></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:5.46mm;height:3.53mm;width:29.27mm;"><span class="hrt cs1">상자 글상자 글상</span></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:11.11mm;height:3.53mm;width:29.27mm;"><span class="hrt cs1">자 글상자 글상자&nbsp;</span></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:16.75mm;height:3.53mm;width:29.27mm;"><span class="hrt cs1">글상자 글상자 글</span></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:22.40mm;height:3.53mm;width:29.27mm;"><span class="hrt cs1">상자 글상자</span></div></div></div></div></div><div class="hls ps1" style="line-height:25.40mm;white-space:nowrap;left:0.00mm;top:128.27mm;height:25.40mm;width:70.99mm;"><div class="htb" style="left:0mm;width:76mm;top:0mm;height:23.45mm;display:inline-block;position:relative;vertical-align:middle;"><svg class="hs" viewBox="-2.5 -2.5 79 27.17" style="left:-2.5mm;top:-2.5mm;width:79mm;height:27.17mm;"><defs></defs><path d="M0,0 L0,22.17" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M74,0 L74,22.17" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,0 L74.06,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,22.17 L74.06,22.17" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,22.17 L74.06,22.17" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:74mm;height:21.46mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI"><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:32.50mm;"><span class="hrt cs1">표 셀 안의 다단</span></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:5.46mm;height:3.53mm;width:32.50mm;"><span class="hrt cs1">표 셀 표 셀 표 셀&nbsp;</span></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:11.11mm;height:3.53mm;width:32.50mm;"><span class="hrt cs1">표 셀 표 셀 표 셀&nbsp;</span></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:16.75mm;height:3.53mm;width:32.50mm;"><span class="hrt cs1">표 셀 표 셀 표 셀&nbsp;</span></div></div><div class="hcI" style="left:40.50mm;"><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:32.50mm;"><span class="hrt cs1">표 셀 표 셀 표 셀&nbsp;</span></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:5.46mm;height:3.53mm;width:32.50mm;"><span class="hrt cs1">표 셀 표 셀 표 셀&nbsp;</span></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:11.11mm;height:3.53mm;width:32.50mm;"><span class="hrt cs1">표 셀 표 셀</span></div><div class="hls ps0" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:16.75mm;height:3.53mm;width:32.50mm;"></div></div></div></div></div></div><div class="hls ps1" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:168.73mm;height:3.53mm;width:70.99mm;"></div></div></div></div></body>

</html>
