crates/hwp-core/tests/snapshots/snapshot_tests__multicolumns_layout_hwpx_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="hwp-body">
<p><span style="font-size: 10.0pt; font-family: '바탕'">첫페이지 첫 문단: 1단</span></p>
<p><span style="font-size: 120.0pt; font-family: '바탕'; color: rgb(102,51,0)">2단 2단 2단</span><span style="font-size: 120.0pt; font-family: '바탕'; color: rgb(0,0,255)">2단 2단 2단</span><span style="font-size: 120.0pt; font-family: '바탕'; color: rgb(102,51,0)">2단 2단 2단</span></p>
<p><span style="font-size: 120.0pt; font-family: '바탕'; color: rgb(0,0,255)">2단 2단 2단</span></p>
<p><span style="font-size: 72.0pt; font-family: '바탕'">3단 3단 3단 3단  3단  3단  3단 3단 3단 3단 3단</span></p>
<p><span style="font-size: 72.0pt; font-family: '바탕'">3단 3단</span></p>
<p><span style="font-size: 72.0pt; font-family: '바탕'">3단 3단 3단</span></p>
<hr class="hwp-page-break">
<p><span style="font-size: 10.0pt; font-family: '바탕'">두 번 째 페이지: 새 쪽으로 2 단</span></p>
<p><span style="font-size: 72.0pt; font-family: '바탕'">다단다단다단다단다단다단다단</span></p>
<div class="hwp-textbox"><p><span style="font-size: 10.0pt; font-family: '바탕'">글 상자 안의 다단</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자 글상자</span></p></div><table class="hwp-table" style="border-collapse: collapse; border-left: 0.12 mm solid rgb(0,0,0); border-right: 0.12 mm solid rgb(0,0,0); border-top: 0.12 mm solid rgb(0,0,0); border-bottom: 0.12 mm solid rgb(0,0,0)">
<tr>
<td style="border-left: 0.12 mm solid rgb(0,0,0); border-right: 0.12 mm solid rgb(0,0,0); border-top: 0.12 mm solid rgb(0,0,0); border-bottom: 0.12 mm solid rgb(0,0,0); width: 209.8pt"><p><span style="font-size: 10.0pt; font-family: '바탕'">표 셀 안의 다단</span></p>
<p><span style="font-size: 10.0pt; font-family: '바탕'">표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀 표 셀</span></p>  </td>
</tr>
</table>
</div>
